# thesis-paper-agents

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  add_manual.py  daily_researcher.py  docker-compose.yml  export_thesis.py  find_foundational_gaps.py  historical_collector.py  paper_compiler.py  pyproject.toml  requirements.txt  review_papers.py  run_all.py  search_specific.py  summary.py  web_monitor.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: config.yaml  keywords.yaml  trusted_sources.yaml
data/: existing_papers.json  historical_checkpoint.json
output/: highlights.md
output/daily/: 2026-02-21_daily_papers.md  2026-02-22_daily_papers.md  2026-02-23_daily_papers.md  2026-02-24_daily_papers.md  2026-03-06_daily_papers.json  2026-03-06_daily_papers.md
output/historical/: 2026-02-21_historical_collection.md
output/rag_corpus/: accepted_papers_metadata.json
output/reports/: consolidated_report.md  gap_analysis.md  references_apa7.md  statistics.md
output/thesis/: estado_del_arte_borrador.md  estado_del_arte_tabla.md  literature_map.mermaid  referencias_tesis.md
src/agents/: daily_researcher.py  paper_compiler.py
src/apis/: arxiv_api.py  crossref_api.py  openalex_api.py  semantic_scholar.py
src/models/: paper.py
src/utils/: api_runtime.py  cache_manager.py  duplicate_detector.py  gap_analyzer.py  logger.py  monitor_store.py  reference_formatter.py  relevance_scorer.py  sqlite_store.py
src/web/: __init__.py  app.py  proxy.py
src/web/static/: app.css
src/web/templates/: _paper_review_panel.html  _papers_table.html  base.html  dashboard.html  jobs.html  paper_detail.html  papers.html  proxy_settings.html
tests/: conftest.py  test_arxiv_api.py  test_crossref_api.py  test_duplicate_detector.py  test_logger.py  test_models.py  test_openalex_api.py  test_reference_formatter.py  test_relevance_scorer.py  test_semantic_scholar_api.py  test_sqlite_store.py  test_web.py
